[gd_scene load_steps=3 format=3 uid="uid://ddt6312dvtjhg"]

[ext_resource type="Script" path="res://scenes/settings.gd" id="1_5birq"]
[ext_resource type="AudioStream" uid="uid://d1givqgarpvb8" path="res://assets/sounds/Lite Saturation - Fantastic Magically Orchestra.mp3" id="2_oydun"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5birq")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -150.0
offset_right = 172.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 92.0
offset_top = 253.0
offset_right = 251.0
offset_bottom = 284.0
text = "Back To Start Menu"

[node name="SettingsLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 10.0
offset_right = 30.0
offset_bottom = 36.0
grow_horizontal = 2
text = "Settings"

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false

[node name="GridContainer" type="GridContainer" parent="Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 14
theme_override_constants/v_separation = 10
columns = 4

[node name="MasterIcon" type="TextureRect" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Master"

[node name="MasterBar" type="HScrollBar" parent="Panel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001
value = 1.0

[node name="GhostBar" type="HScrollBar" parent="Panel/CenterContainer/GridContainer/MasterBar"]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = -17.0
offset_right = 123.0
offset_bottom = -9.0
step = 1.0
value = 100.0
rounded = true

[node name="MasterValue" type="Label" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 1

[node name="MusicIcon" type="TextureRect" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicHBar" type="HScrollBar" parent="Panel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001
value = 1.0

[node name="MusicValue" type="Label" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 1

[node name="SoundIcon" type="TextureRect" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2

[node name="SoundLabel" type="Label" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Sound FX"

[node name="SoundHBar" type="HScrollBar" parent="Panel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001
value = 1.0

[node name="SoundValue" type="Label" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 1

[node name="ScreenIcon" type="TextureRect" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2

[node name="ScreenModeLabel3" type="Label" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Screen Mode"

[node name="ScreenModeLabel" type="Label" parent="Panel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Fullscreen"
horizontal_alignment = 1

[node name="ScreenCheckButton" type="CheckButton" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2
button_pressed = true

[node name="ResolutionIcon" type="TextureRect" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOptions" type="OptionButton" parent="Panel/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/arrow_margin = 10
theme_override_constants/outline_size = 1
theme_override_constants/modulate_arrow = 0
button_pressed = true
alignment = 1
item_count = 6
selected = 0
allow_reselect = true
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1440x900"
popup/item_2/id = 2
popup/item_3/text = "1366x768"
popup/item_3/id = 3
popup/item_4/text = "1280x800"
popup/item_4/id = 4
popup/item_5/text = "1024x768"
popup/item_5/id = 5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_oydun")
bus = &"Music"

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="Panel/CenterContainer/GridContainer/MasterBar" to="." method="_on_master_bar_value_changed"]
[connection signal="value_changed" from="Panel/CenterContainer/GridContainer/MusicHBar" to="." method="_on_music_h_bar_value_changed"]
[connection signal="value_changed" from="Panel/CenterContainer/GridContainer/SoundHBar" to="." method="_on_sound_h_bar_value_changed"]
[connection signal="toggled" from="Panel/CenterContainer/GridContainer/ScreenCheckButton" to="." method="_on_screen_check_button_toggled"]
[connection signal="item_selected" from="Panel/CenterContainer/GridContainer/ResolutionOptions" to="." method="_on_resolution_options_item_selected"]
